4.0-rc1
 * Migrate dependency handling from maven-ant-tasks to resolver-ant-tasks, removing lib/ directory from version control (CASSANDRA-16391)
 * Fix 4.0 node sending a repair prepare message to a 3.x node breaking the connection (CASSANDRA-16542)
 * Removed synchronized modifier from StreamSession#onChannelClose to prevent deadlocking on flush (CASSANDRA-15892)
 * Throw IOE in AbstractType.writeValue if value has wrong fixed length (CASSANDRA-16500)
 * Execute background refreshing of auth caches on a dedicated executor (CASSANDRA-15177)
 * Update bundled java and python drivers to 3.11.0 and 3.25.0 respectively (CASSANDRA-13951)
 * Add io.netty.tryReflectionSetAccessible=true to j11 server options in order to enable netty to use Unsafe direct byte buffer construction (CASSANDRA-16493)
 * Make cassandra-stress -node support host:port notation (CASSANDRA-16529)
 * Better handle legacy gossip application states during (and after) upgrades (CASSANDRA-16525)
 * Mark StreamingMetrics.ActiveOutboundStreams as deprecated (CASSANDRA-11174)
 * Increase the cqlsh version number (CASSANDRA-16509)
 * Fix the CQL generated for the views.where_clause column when some identifiers require quoting (CASSANDRA-16479)
 * Send FAILED_SESSION_MSG on shutdown and on in-progress repairs during startup (CASSANDRA-16425)
 * Reinstate removed ApplicationState padding (CASSANDRA-16484)
 * Expose data dirs to ColumnFamilyStoreMBean (CASSANDRA-16335)
 * Add possibility to copy SSTables in SSTableImporter instead of moving them (CASSANDRA-16407)
 * Fix DESCRIBE statement for CUSTOM indices with options (CASSANDRA-16482)
 * Fix cassandra-stress JMX connection (CASSANDRA-16473)
 * Avoid processing redundant application states on endpoint changes (CASSANDRA-16381)
 * Prevent parent repair sessions leak (CASSANDRA-16446)
 * Fix timestamp issue in SinglePartitionSliceCommandTest testPartitionD…eletionRowDeletionTie (CASSANDRA-16443)
 * Promote protocol V5 out of beta (CASSANDRA-14973)