@@ -19,6 +19,8 @@ package org.apache.cassandra.io.sstable;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 import org.apache.cassandra.db.DecoratedKey;
 import org.apache.cassandra.db.RowIndexEntry;
@@ -35,7 +37,7 @@ public class KeyIterator extends AbstractIterator<DecoratedKey> implements Close
     private final static class In
     {
         private final File path;
-        private RandomAccessReader in;
+        private volatile RandomAccessReader in;
 
         public In(File path)
         {
@@ -44,8 +46,16 @@ public class KeyIterator extends AbstractIterator<DecoratedKey> implements Close
 
         private void maybeInit()
         {
-            if (in == null)
-                in = RandomAccessReader.open(path);
+            if (in != null)
+                return;
+
+            synchronized (this)
+            {
+                if (in == null)
+                {
+                    in = RandomAccessReader.open(path);
+                }
+            }
         }
 
         public DataInputPlus get()
@@ -82,6 +92,7 @@ public class KeyIterator extends AbstractIterator<DecoratedKey> implements Close
     private final Descriptor desc;
     private final In in;
     private final IPartitioner partitioner;
+    private final ReadWriteLock fileAccessLock;
 
     private long keyPosition;
 
@@ -90,10 +101,12 @@ public class KeyIterator extends AbstractIterator<DecoratedKey> implements Close
         this.desc = desc;
         in = new In(new File(desc.filenameFor(Component.PRIMARY_INDEX)));
         partitioner = metadata.partitioner;
+        fileAccessLock = new ReentrantReadWriteLock();
     }
 
     protected DecoratedKey computeNext()
     {
+        fileAccessLock.readLock().lock();
         try
         {
             if (in.isEOF())
@@ -108,20 +121,42 @@ public class KeyIterator extends AbstractIterator<DecoratedKey> implements Close
         {
             throw new RuntimeException(e);
         }
+        finally
+        {
+            fileAccessLock.readLock().unlock();
+        }
     }
 
     public void close()
     {
-        in.close();
+        fileAccessLock.writeLock().lock();
+        try
+        {
+            in.close();
+        }
+        finally
+        {
+            fileAccessLock.writeLock().unlock();
+        }
     }
 
     public long getBytesRead()
     {
-        return in.getFilePointer();
+        fileAccessLock.readLock().lock();
+        try
+        {
+            return in.getFilePointer();
+        }
+        finally
+        {
+            fileAccessLock.readLock().unlock();
+        }
     }
 
     public long getTotalBytes()
     {
+        // length is final in the referenced object.
+        // no need to acquire the lock
         return in.length();
     }
 
