@@ -18,15 +18,21 @@
 
 package org.apache.cassandra.db.compaction;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Sets;
+import com.google.common.util.concurrent.Uninterruptibles;
 import org.junit.Test;
 
 import org.apache.cassandra.cache.AutoSavingCache;
@@ -43,6 +49,7 @@ import org.apache.cassandra.io.sstable.IndexSummaryRedistribution;
 import org.apache.cassandra.io.sstable.format.SSTableReader;
 import org.apache.cassandra.schema.TableId;
 import org.apache.cassandra.service.CacheService;
+import org.apache.cassandra.utils.FBUtilities;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -52,6 +59,50 @@ import static org.junit.Assert.assertTrue;
 public class ActiveCompactionsTest extends CQLTester
 {
     @Test
+    public void testActiveCompactionTrackingRaceWithIndexBuilder() throws Throwable
+    {
+        createTable("CREATE TABLE %s (pk int, ck int, a int, b int, PRIMARY KEY (pk, ck))");
+        String idxName = createIndex("CREATE INDEX on %s(a)");
+        getCurrentColumnFamilyStore().disableAutoCompaction();
+        for (int i = 0; i < 5; i++)
+        {
+            execute("INSERT INTO %s (pk, ck, a, b) VALUES (" + i + ", 2, 3, 4)");
+            getCurrentColumnFamilyStore().forceBlockingFlush();
+        }
+
+        Index idx = getCurrentColumnFamilyStore().indexManager.getIndexByName(idxName);
+        Set<SSTableReader> sstables = getCurrentColumnFamilyStore().getLiveSSTables();
+
+        ExecutorService es = Executors.newFixedThreadPool(2);
+
+        final int loopCount = 5000;
+        for (int ii = 0; ii < loopCount; ii++)
+        {
+            CountDownLatch trigger = new CountDownLatch(1);
+            SecondaryIndexBuilder builder = idx.getBuildTaskSupport().getIndexBuildTask(getCurrentColumnFamilyStore(), Collections.singleton(idx), sstables);
+            Future<?> f1 = es.submit(() -> {
+                Uninterruptibles.awaitUninterruptibly(trigger);
+                try
+                {
+                    CompactionManager.instance.submitIndexBuild(builder).get();
+                }
+                catch (Exception e)
+                {
+                    throw new RuntimeException(e);
+                }
+            });
+            Future<?> f2 = es.submit(() -> {
+                Uninterruptibles.awaitUninterruptibly(trigger);
+                CompactionManager.instance.active.getCompactionsForSSTable(null, null);
+            });
+            trigger.countDown();
+            FBUtilities.waitOnFutures(Arrays.asList(f1, f2));
+        }
+        es.shutdown();
+        es.awaitTermination(1, TimeUnit.MINUTES);
+    }
+
+    @Test
     public void testSecondaryIndexTracking() throws Throwable
     {
         createTable("CREATE TABLE %s (pk int, ck int, a int, b int, PRIMARY KEY (pk, ck))");
@@ -59,7 +110,7 @@ public class ActiveCompactionsTest extends CQLTester
         getCurrentColumnFamilyStore().disableAutoCompaction();
         for (int i = 0; i < 5; i++)
         {
-            execute("INSERT INTO %s (pk, ck, a, b) VALUES ("+i+", 2, 3, 4)");
+            execute("INSERT INTO %s (pk, ck, a, b) VALUES (" + i + ", 2, 3, 4)");
             getCurrentColumnFamilyStore().forceBlockingFlush();
         }
 
@@ -82,7 +133,7 @@ public class ActiveCompactionsTest extends CQLTester
         getCurrentColumnFamilyStore().disableAutoCompaction();
         for (int i = 0; i < 5; i++)
         {
-            execute("INSERT INTO %s (pk, ck, a, b) VALUES ("+i+", 2, 3, 4)");
+            execute("INSERT INTO %s (pk, ck, a, b) VALUES (" + i + ", 2, 3, 4)");
             getCurrentColumnFamilyStore().forceBlockingFlush();
         }
         Set<SSTableReader> sstables = getCurrentColumnFamilyStore().getLiveSSTables();
@@ -107,7 +158,7 @@ public class ActiveCompactionsTest extends CQLTester
         getCurrentColumnFamilyStore().disableAutoCompaction();
         for (int i = 0; i < 5; i++)
         {
-            execute("INSERT INTO %s (k1, c1, val) VALUES ("+i+", 2, 3)");
+            execute("INSERT INTO %s (k1, c1, val) VALUES (" + i + ", 2, 3)");
             getCurrentColumnFamilyStore().forceBlockingFlush();
         }
         execute(String.format("CREATE MATERIALIZED VIEW %s.view1 AS SELECT k1, c1, val FROM %s.%s WHERE k1 IS NOT NULL AND c1 IS NOT NULL AND val IS NOT NULL PRIMARY KEY (val, k1, c1)", keyspace(), keyspace(), currentTable()));
